OwnAudioEngineRust/ownaudio-ffi/include/ownaudio_ffi.h


typedef struct OwnAudioEngineHandle {
    uint8_t _private[0];
} OwnAudioEngineHandle;
typedef struct OwnAudioMixerHandle {
    uint8_t _private[0];
} OwnAudioMixerHandle;
typedef struct OwnAudioStreamConfig {
    uint32_t sample_rate;
    uint16_t channels;
    enum OwnAudioSampleFormat sample_format;
    uint32_t buffer_size_frames;
} OwnAudioStreamConfig;
typedef void (*OwnAudioOutputCallback)(float *buffer,
                                       size_t frame_count,
                                       uint16_t channels,
                                       void *user_data);
typedef struct OwnAudioOutputStreamHandle {
    uint8_t _private[0];
} OwnAudioOutputStreamHandle;
typedef struct OwnAudioLoadStats {
    uint64_t block_count;
    uint64_t peak_block_ns;
    uint64_t average_block_ns;
    uint64_t underrun_frames;
    float average_load;
    float peak_load;
} OwnAudioLoadStats;
typedef void (*OwnAudioInputCallback)(const float *buffer,
                                      size_t frame_count,
                                      uint16_t channels,
                                      void *user_data);
typedef struct OwnAudioInputStreamHandle {
    uint8_t _private[0];
} OwnAudioInputStreamHandle;
int32_t ownaudio_v1_open_output_stream(struct OwnAudioEngineHandle *engine,
                                       const char *device_name,
                                       const struct OwnAudioStreamConfig *config,
                                       OwnAudioOutputCallback callback,
                                       void *user_data,
                                       struct OwnAudioOutputStreamHandle **out_stream);
int32_t ownaudio_v1_open_output_stream_ex(struct OwnAudioEngineHandle *engine,
                                          const char *device_name,
                                          const struct OwnAudioStreamConfig *config,
                                          OwnAudioOutputCallback callback,
                                          void *user_data,
                                          uint32_t render_ring_frames,
                                          struct OwnAudioOutputStreamHandle **out_stream);
int32_t ownaudio_v1_mixer_open_output_stream(struct OwnAudioEngineHandle *engine,
                                             struct OwnAudioMixerHandle *mixer,
                                             const char *device_name,
                                             const struct OwnAudioStreamConfig *config,
                                             struct OwnAudioOutputStreamHandle **out_stream);
int32_t ownaudio_v1_output_stream_play(struct OwnAudioOutputStreamHandle *stream);
int32_t ownaudio_v1_output_stream_pause(struct OwnAudioOutputStreamHandle *stream);
int32_t ownaudio_v1_output_stream_get_error_state(struct OwnAudioOutputStreamHandle *stream,
                                                  uint32_t *out_kind,
                                                  uint64_t *out_count);
int32_t ownaudio_v1_output_stream_get_latency_frames(struct OwnAudioOutputStreamHandle *stream,
                                                     uint32_t *out_frames);
int32_t ownaudio_v1_output_stream_write(struct OwnAudioOutputStreamHandle *stream,
                                        const float *src,
                                        size_t src_len,
                                        size_t *out_written);
int32_t ownaudio_v1_output_stream_get_queued_samples(struct OwnAudioOutputStreamHandle *stream,
                                                     size_t *out_samples);
int32_t ownaudio_v1_output_stream_get_ring_frames(struct OwnAudioOutputStreamHandle *stream,
                                                  uint32_t *out_frames);
int32_t ownaudio_v1_output_stream_clear(struct OwnAudioOutputStreamHandle *stream);
int32_t ownaudio_v1_output_stream_get_underrun_frames(struct OwnAudioOutputStreamHandle *stream,
                                                      uint64_t *out_frames);
int32_t ownaudio_v1_output_stream_get_load_stats(struct OwnAudioOutputStreamHandle *stream,
                                                 struct OwnAudioLoadStats *out_stats);
int32_t ownaudio_v1_output_stream_reset_load_stats(struct OwnAudioOutputStreamHandle *stream);
void ownaudio_v1_output_stream_destroy(struct OwnAudioOutputStreamHandle *stream);
int32_t ownaudio_v1_open_input_stream(struct OwnAudioEngineHandle *engine,
                                      const char *device_name,
                                      const struct OwnAudioStreamConfig *config,
                                      OwnAudioInputCallback callback,
                                      void *user_data,
                                      struct OwnAudioInputStreamHandle **out_stream);
int32_t ownaudio_v1_input_stream_play(struct OwnAudioInputStreamHandle *stream);
int32_t ownaudio_v1_input_stream_pause(struct OwnAudioInputStreamHandle *stream);
int32_t ownaudio_v1_input_stream_get_error_state(struct OwnAudioInputStreamHandle *stream,
                                                 uint32_t *out_kind,
                                                 uint64_t *out_count);
int32_t ownaudio_v1_input_stream_get_latency_frames(struct OwnAudioInputStreamHandle *stream,
                                                    uint32_t *out_frames);
int32_t ownaudio_v1_input_stream_read(struct OwnAudioInputStreamHandle *stream,
                                      float *dst,
                                      size_t dst_len,
                                      size_t *out_read);
int32_t ownaudio_v1_input_stream_clear(struct OwnAudioInputStreamHandle *stream);
int32_t ownaudio_v1_input_stream_get_dropped_frames(struct OwnAudioInputStreamHandle *stream,
                                                    uint64_t *out_frames);
void ownaudio_v1_input_stream_destroy(struct OwnAudioInputStreamHandle *stream);